隔离节点更新

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -12,17 +12,27 @@
 
 * 通过 `ISOLATE SERVER` 命令隔离节点
 
-### `STOP SERVER` 命令
+使用以上命令隔离节点成功后，该节点的 `status` 字段仍为 `ACTIVE` 不变，但 `stop_time` 字段的值由 `NULL` 变为 Stop Server 的时间点，表示该节点处于 stopped 状态。
 
-假设被执行 `STOP SERVER` 命令的节点为 A，`STOP SERVER` 命令内部的执行逻辑如下：
+对于 `STOP SERVER` 命令，假设被执行 `STOP SERVER` 命令的节点为 A，`STOP SERVER` 命令的内部执行逻辑如下：
 
-* 检查除去 A 上的分区副本外，其他剩余副本是否依然能形成多数派。如果剩余副本不能形成多数派，则不允许对 A 执行 `STOP SERVER`操作。
+1. 检查是否有跨 Zone 的节点被 Stop。如果存在，则不允许对 A 执行 Stop Server 操作。
 
-* 检查集群内的所有分区副本的 CLog 的 `is_in_sync` 状态是否为 `1`。如果存在任意 `is_in_sync` 状态为 `0` 的副本，不允许对 A 执行 STOP SERVER 操作。
+2. 以日志流为单位，检查是否存在无主的日志流。如果存在，则不允许对 A 执行 Stop Server 操作。
 
-* 以上两个条件检查通过后，设置 A 的节点状态为 `stopped`，并等待 A 上的 Leader 全部切走，然后给客户端返回成功。
+3. 以日志流为单位，检查除去 A 及其他非可用状态的节点（包括 `INACTIVE`、stopped（`ACTIVE` 状态且 `stop_time` 字段大于 0）及 `DELETING` 状态的节点），剩余节点上的副本是否依然能形成多数派。如果不能形成多数派，则不允许对 A 执行 Stop Server 操作。
 
-对于 Stop Server 成功的节点，可以执行任意运维动作而不影响业务流量，例如执行重启节点操作。
+4. 以日志流为单位，检查多数派副本的日志是否同步（对比日志流的 Follower 副本 和 Leader 副本 的 RedoLog 延迟是否在 5 秒以内）。如果检查不通过，则不允许对 A 执行 Stop Server 操作。
+
+5. 以上条件检查通过后，设置 A 的 `stop_time` 字段，并等待待A 上的 Leader 全部切走，然后给客户端返回成功。
+
+   由于该步骤需要等待 Leader 全部切走，如果该节点上的副本数较多，`STOP SERVER` 命令可能会执行超时，超时后可以重新执行 `STOP SERVER` 命令，直到成功为止。
+
+由于 `STOP SERVER` 命令的前置检查较多，生产环境存在检查不通过而无法隔离的情况。`FORCE STOP SERVER` 命令和 `ISOLATE SERVER` 命令是 `STOP SERVER` 命令的弱化版本，其差异主要在：
+
+* `FORCE STOP SERVER` 命令的内部执行逻辑，跳过了 `STOP SERVER` 命令逻辑的第 4 步。
+
+* `ISOLATE SERVER` 的逻辑，跳过了 `STOP SERVER` 命令逻辑的 2~4 步，并且仅将节点状态在 RS 端标记为 stopped，不再等待 Leader 全部切走，然后给客户端返回成功。
 
 ### `FORCE STOP SERVER` 命令
 
@@ -38,7 +48,7 @@
 
 不对 C 做任何条件检查，仅将 C 的节点状态在 RS 端标记为 stopped，然后给客户端返回成功。
 
-## 隔离节点
+## 操作步骤
 
 在对节点进行异常隔离或者运维操作时，可以使用如下递进方式进行处理：
 
@@ -98,17 +108,17 @@
 
    成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
 
-   * 集群中所有分区副本完好，但问题节点上存在 Leader，Kill observer 进程后出现部分分区副本无主选举，短时间影响业务流量。
+   * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
-   * 集群中存在部分分区已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分分区无法形成多数派，这些分区在 Kill observer 后会长时间无主，长时间影响业务流量。
+   * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
 
 5. 使用 `kill -9 pid` 命令 Kill observer 进程。
 
    本操作务必要谨慎，可能会产生如下严重影响：
 
-   * 集群中所有分区副本完好，但问题节点上存在 Leader，kill server 后出现部分分区副本无主选举，短时间影响业务流量。
+   * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
-   * 集群中存在部分分区已经缺副本，但依然能够达成多数派，kill server 后导致部分分区无法形成多数派，这些分区在 kill server 后会长时间无主，长时间影响业务流量。
+   * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
 
    具体操作如下：
 
@@ -117,19 +127,30 @@
    2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
        ```bash
-       [admin@xxx oceanbase]$ cd /home/admin/oceanbase/bin
+       [admin@xxx /]$ cd /home/admin/oceanbase/bin
        ```
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
       ```bash
       [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
+      admin       6136      0 99 11:23 ?        00:00:19 ./bin/observer
       ```
 
    4. Kill observer 进程。
 
-      ```sql
+      命令如下：
+
+      ```bash
       [admin@xxx oceanbase]$ kill -9 pid
+      ```
+
+      其中，`pid` 为待停止的节点的 observer 进程 ID。
+
+      示例如下：
+
+      ```bash
+      [admin@xxx oceanbase]$ kill -9 6136
       ```
 
 ## 相关文档
