--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.isolation-a-zone.md
@@ -12,12 +12,23 @@
 
 * 通过 `ISOLATE ZONE` 命令隔离 Zone
 
-### `STOP ZONE` 命令
+对于 `STOP ZONE` 命令，
 
 ### `FORCE STOP ZONE` 命令
 
 ### `ISOLATE ZONE` 命令
 
-## 隔离 Zone
+## 操作步骤
 
 
+## 相关文档
+
+更多 Zone 相关的运维操作，请参见以下信息：
+
+* [查看 Zone](1.view-a-zone.md)
+
+* [添加 Zone](7.add-a-zone.md)
+
+* [删除 Zone](8.delete-a-zone.md)
+
+* [修改 Zone](9.modify-a-zone.md)
