--- a/zh-CN/6.manage/2.tenant-management/3.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/3.commom-tenant-operations/1.create-resource-specifications.md
@@ -1,10 +1,10 @@
 # 创建资源规格
 
-本文介绍如何通过 SQL 语句创建资源单元。
+本文介绍如何通过 SQL 语句创建资源规格。
 
 ## 背景信息
 
-租户使用的资源被限制在资源单元的范围内，如果当前存在的资源单元配置无法满足新租户的需要，可以新建资源单元配置。
+资源规格是指资源单元的规格，资源单元是资源调度使用的基本单位，在不同场景中，会用到不同大小的资源单元，就需要通过 `CREATE RESOURCE UNIT` 来创建合适的资源规格，从而可以调度使用相应大小的资源单元。
 
 ## 操作步骤
 
@@ -20,13 +20,13 @@
     obclient> USE oceanbase;
     ```
 
-3. 通过 DBA_OB_UNIT_CONFIGS 视图，获取当前租户中的资源配置信息。该视图的详细说明，请参见 [DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)
+3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取当前租户中的资源配置信息。该视图的详细说明，请参见 [DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
     ```sql
     obclient> SELECT * FROM DBA_OB_UNIT_CONFIGS;
     ```
 
-4. 通过 `CREATE RESOURCE UNIT` 语句，创建名为 S1_unit_config 的资源规格。该语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
+4. 通过 `CREATE RESOURCE UNIT` 语句，创建名为 `S1_unit_config` 的资源规格。该语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
 
     ```sql
     obclient> CREATE RESOURCE UNIT S1_unit_config
@@ -36,7 +36,7 @@
         MAX_IOPS = 10000, MIN_IOPS = 10000, IOPS_WEIGHT=1;
     ```
 
-5. 再通过 DBA_OB_UNIT_CONFIGS 视图，确认创建成功。
+5. 再通过 `DBA_OB_UNIT_CONFIGS` 视图，确认创建成功。
 
     ```sql
     obclient> SELECT * FROM DBA_OB_UNIT_CONFIGS where name = 'S1_unit_config';
@@ -50,10 +50,12 @@
 
 ## 更多信息
 
-创建资源单元后，管理员就可以在创建资源池时指定资源单元，并最终分配给相应的租户，更多资源单元的管理操作请参见以下信息：
+创建资源单元后，管理员就可以在创建资源池时指定资源单元，并最终分配给相应的租户，详细操作，请参见：
 
-* [查看资源单元配置](3.management-resource-unit/1.view-resource-unit-configuration.md)
+* [创建资源池](2.create-resource-pool.md)
 
-* [修改资源单元的配置](3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md)
+* [创建租户](3.create-tenant.md)
 
-* [删除资源单元](3.management-resource-unit/3.delete-a-resource-unit-1.md)
+* [修改资源单元的配置](5.modify-resource-specifications.md)
+
+* [删除资源单元](12.delete-resource-specification.md)
