提交部分修改

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
@@ -1,10 +1,24 @@
-# 查看集群参数
+# 查看集群配置项
 
-集群参数即集群级配置项，您可以通过配置文件或 SQL 语句来查看集群参数的信息。
+您可以通过配置文件或 SQL 语句来查看集群配置项的信息。
 
-## 通过配置文件查看集群参数
+## 背景信息
 
-在启动 observer 进程时，如果您没有指定集群参数，待 observer 进程启动后，系统就会使用其指定的参数的 Default 值。在 observer 进程启动成功后，参数值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以通过 strings observer.config.bin 命令来查看文件中的内容。
+系统租户和用户租户均可以查看集群配置项。
+
+## 操作步骤
+
+查看集群配置项主要有以下几种方式：
+
+* 通过配置文件 `observer.config.bin` 查看集群配置项
+
+* 通过 `SHOW` 语句 查看集群配置项
+
+* 通过 `GV$OB_PARAMETERS` 视图查看集群配置项
+
+### 通过配置文件 observer.config.bin 查看集群配置项
+
+在启动 observer 进程时，如果您没有指定集群配置项，待 observer 进程启动后，系统就会使用其指定的配置项的 Default 值。在 observer 进程启动成功后，配置项值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以通过 strings observer.config.bin 命令来查看文件中的内容。
 
 具体操作如下：
 
@@ -22,7 +36,7 @@
    [admin@xxx etc]$ strings observer.config.bin
    ```
 
-## 通过 SHOW 语句查看集群参数
+### 通过 SHOW 语句查看集群配置项
 
 系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群级配置项的值。
 
@@ -34,7 +48,9 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
-2. 执行以下命令，查看集群参数。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
+2. 执行以下命令，查看集群配置项。
 
    语句如下：
 
@@ -73,7 +89,7 @@
    | source     | 当前值来源： <ul><li>`TENANT`</li> <li>`CLUSTER` </li>  <li>`CMDLINE`</li> <li>`OBADMIN` </li>  <li>`FILE`</li> <li>`DEFAULT`</li></ul>           |
    | edit_level | 定义该配置项的修改行为： <ul><li>`READONLY`：表示该参数不可修改。</li> <li>`STATIC_EFFECTIVE`：表示该参数可修改但需要重启 OBServer 才会生效。</li>   <li>`DYNAMIC_EFFECTIVE`：表示该参数可修改且修改后动态生效。</li></ul>          |
 
-## 通过视图查看集群参数
+### 通过 GV$OB_PARAMETERS 视图查看集群配置项
 
 1. 系统租户或用户租户登录到数据库。
 
@@ -83,7 +99,9 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
-2. 执行以下命令，查看集群参数。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
+2. 执行以下命令，查看集群配置项。
 
    MySQL 租户的查询示例如下：
 
@@ -119,4 +137,4 @@
 
 ## 相关文档
 
-更多集群参数的运维操作，请参见 [修改集群参数](12.modify-cluster-parameters.md)。
+更多集群配置项的运维操作，请参见 [修改集群配置项](12.modify-cluster-parameters.md)。
