--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -2,7 +2,7 @@
 
 重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程。
 
-## 重启节点
+## 操作步骤
 
 本文以重启集群中的一个节点为例提供操作指导，如果需要重启多个节点，请参考本操作执行多次即可。
 
@@ -13,6 +13,8 @@
    ```shell
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
+
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. 执行以下命令，进行节点隔离。
 
