--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -6,7 +6,7 @@
 
 * 请确认待增加的所有 OBServer 服务器已完成相关配置，具体操作可参见 [服务器配置](../../../4.deploy/3.preparations-before-deployment-1/2.server-configuration.md) 章节和 [部署环境配置](../../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md)章节。
 
-* 增加节点前需要为所有 OBServer 服务器安装数据库软件，请确认已从 OceanBase 技术支持人员处获取对应版本的 OceanBase 数据库软件安装包。
+* 增加节点前需要为所有 OBServer 服务器安装数据库软件，您可以从 OceanBase 官网的下载中心下载对应版本的 OceanBase 数据库软件安装包安装包，或者从 OceanBase 技术支持人员处获取。
 
 ## 操作步骤
 
@@ -135,6 +135,8 @@
       * `-r`：用于指定待添加的 OceanBase 集群的 RS 地址列表。
 
       * `-l`：用于指定日志的级别，本示例中为 `WARN`，表示日志级别为 WARNING 级别。
+        
+        有关 OceanBase 数据库日志级别的详细介绍，请参见 [日志打印级别](../../../7.reference/2.administrator-guide/2.basic-database-management/8.manage-logs/2.log-print-level/1.log-print-level-1.md)。
 
       * `-o`：用于指定集群的启动配置项。使用 `-o` 参数时，需满足以下条件：
 
@@ -169,6 +171,9 @@
       ```shell
       [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
       ```
+
+     有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
 
    2. 执行以下命令，向集群的 Zone 中添加节点。
 
