--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-删除 Zone 前，请确认该 Zone 下已不存在 OBServer，并且该 Zone 的状态为 `INACTIVE`，否则将会导致删除 Zone 失败。查看 Zone 状态的相关操作可参见 [查看 Zone](1.view-a-zone.md)；查看 Zone 下的 OBServer 的相关操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+删除 Zone 前，请确认该 Zone 下已不存在 OBServer，并且该 Zone 的状态为 `INACTIVE`，否则将会导致删除 Zone 失败。查看 Zone 状态的相关操作可参见 [查看 Zone](1.view-a-zone.md)；查看 Zone 内的 OBServer 的相关操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
 
 ## 操作步骤
 
@@ -15,6 +15,8 @@
    ```shell
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
+
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. 执行以下命令，删除集群中的 Zone。
 
