--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
@@ -12,6 +12,8 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
 2. 执行以下命令，修改 Zone 属性。
 
    语句如下：
