--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
@@ -12,6 +12,8 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
 2. 查询 `oceanbase.DBA_OB_ZONES` 视图，获取集群中的 Zone 信息。
 
    ```sql
@@ -42,6 +44,8 @@
    * `REGION`：Zone 所在的区域，通常为城市名（例如，上海）或者区域名（例如，华东）。
 
    * `TYPE`：Zone 类型，`ReadWrite` 表示读写类型，当前版本仅支持读写类型的 Zone。
+
+   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/63.oceanbase-dba_ob_zones.md)。
 
 ## 相关文档
 
