--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -6,6 +6,11 @@
 
 Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元（称为 Unit ）会在同一个 Zone 中进行迁移。Unit 的迁移动作是 Unit 自动均衡的过程，主要由 RootService 控制。待 Unit 迁移成功，Delete Server 操作即可执行成功。如果您想要选择待删除节点上 Unit 迁移的目标机器，可以手动执行 Unit 迁移。
 
+>**说明**
+>
+>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 `oceanbase.GV$OB_SERVERS` 视图判断 Zone 内各 OBServer 的资源使用情况。
+
+
 ## 操作步骤
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
@@ -15,6 +20,8 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    ```shell
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
+
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. （可选）手动迁移待删除节点上的 Unit。
 
@@ -85,7 +92,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
    * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
 
-   删除 `zone4` 中的一台 OBServer，示例如下：
+   删除 `zone1` 中的一台 OBServer，示例如下：
 
    ```sql
    obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.237:2882" zone='zone1'
