--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -2,7 +2,7 @@
 
 当前节点异常或节点运维变更时，需要先隔离节点，将流量切到其他节点，以免业务受到影响。
 
-## 隔离命令
+## 背景信息
 
 隔离节点有以下三种方式：
 
@@ -45,6 +45,8 @@
    ```shell
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
+   
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. 对问题节点执行 Stop Server 操作。
 
