--- a/zh-CN/6.manage/2.tenant-management/3.commom-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/3.commom-tenant-operations/4.view-tenant-information.md
@@ -1,6 +1,6 @@
 # 查看租户和资源信息
 
-本文介绍管理租户过程种常见的一些视图。
+本文介绍如何通过视图查看租户以及资源的相关信息。
 
 ## 查看所有资源规格信息
 
@@ -55,7 +55,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
 
 ## 查看所有的租户信息
 
-通过 DBA_OB_TENANTS 视图，可以查看所有资源规格信息，示例如下：
+通过 DBA_OB_TENANTS 视图，可以查看所有的租户，示例如下：
 
 ```sql
 obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
@@ -77,7 +77,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 视图参数详细说明，请参见 [DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-## 查看所有节点的 Unit 信息
+## 查看节点的 Unit 信息
 
 通过 GV$OB_UNITS 视图，可以查看所有资源规格信息，示例如下：
 
