--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
@@ -18,7 +18,7 @@
 
 ### 通过配置文件 observer.config.bin 查看集群配置项
 
-在启动 observer 进程时，如果您没有指定集群配置项，待 observer 进程启动后，系统就会使用其指定的配置项的 Default 值。在 observer 进程启动成功后，配置项值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以通过 strings observer.config.bin 命令来查看文件中的内容。
+在启动 observer 进程时，如果您没有指定集群配置项，待 observer 进程启动后，系统就会使用其指定的配置项的 Default 值。在 observer 进程启动成功后，配置项值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以查看文件中的集群配置项。
 
 具体操作如下：
 
@@ -134,6 +134,9 @@
    +----------------+----------+-------+---------+-----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+-------------------+
    3 rows in set
    ```
+  
+  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS](少视图)。
+
 
 ## 相关文档
 
