--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -2,6 +2,11 @@
 
 重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程。
 
+<main id="notice" type='explain'>
+            <h4>说明</h4>
+            <p>集群级配置项 <code>server_permanent_offline_time</code> 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。默认为 3600s。有关配置项的更多详细信息，请参见 [server_permanent_offline_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md)。</p>
+          </main>
+
 ## 操作步骤
 
 本文以重启集群中的一个节点为例提供操作指导，如果需要重启多个节点，请参考本操作执行多次即可。
@@ -70,10 +75,10 @@
 
       ```bash
       [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
-      admin       6136      0 99 11:23 ?        00:00:19 ./bin/observer
+      admin    103364      1 99  2022 ?        51-17:24:41 /home/admin/oceanbase/bin/observer
       ```
 
-      示例中，`6136` 即为节点的进程 ID。
+      示例中，`103364` 即为节点的进程 ID。
 
    4. 停止 observer 进程。
 
@@ -88,7 +93,7 @@
       示例如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 6136
+      [admin@xxx oceanbase]$ kill -9 103364
       ```
 
    5. 执行以下命令，确认进程是否已停止。
