--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -6,9 +6,10 @@
 
 Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元（称为 Unit ）会在同一个 Zone 中进行迁移。Unit 的迁移动作是 Unit 自动均衡的过程，主要由 RootService 控制。待 Unit 迁移成功，Delete Server 操作即可执行成功。如果您想要选择待删除节点上 Unit 迁移的目标机器，可以手动执行 Unit 迁移。
 
->**说明**
->
->删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 `oceanbase.GV$OB_SERVERS` 视图判断 Zone 内各 OBServer 的资源使用情况。
+<main id="notice" type='notice'>
+            <h4>注意</h4>
+            <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code>视图判断 Zone 内各 OBServer 的资源使用情况。 </p>
+          </main>
 
 
 ## 操作步骤
@@ -25,9 +26,10 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
 2. （可选）手动迁移待删除节点上的 Unit。
 
-   >**说明**
-   >
-   >建议您手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。
+   <main id="notice" type='explain'>
+            <h4>说明</h4>
+            <p>建议您手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。</p>
+          </main>
 
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
 
