--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -48,59 +48,63 @@
    
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
-2. 对问题节点执行 Stop Server 操作。
+2. 对问题节点执行隔离节点操作。
 
-   语句如下：
+   1. 执行 Stop Server 操作。
 
-   ```sql
-   ALTER SYSTEM STOP SERVER 'ip:port'; 
-   ```
+      语句如下：
 
-   示例：
+      ```sql
+      ALTER SYSTEM STOP SERVER 'ip:port'; 
+      ```
 
-   ```sql
-   obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
-   ```
+      示例：
 
-   成功执行后，可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Force Stop Server 操作。
+      ```sql
+      obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
+      ```
 
-3. 对问题节点执行 Force Stop Server 操作。
+      成功执行后，可以对节点做任何运维操作，可以直接执行 kill observer 进程操作，对业务流量无任何影响。
+      
+      若无法执行成功，请尝试执行 Force Stop Server 操作。
 
-   语句如下：
+   2. 对问题节点执行 Force Stop Server 操作。
 
-   ```sql
-   ALTER SYSTEM FORCE STOP SERVER 'ip:port'; 
-   ```
+      语句如下：
 
-   示例：
+      ```sql
+      ALTER SYSTEM FORCE STOP SERVER 'ip:port'; 
+      ```
 
-   ```sql
-   obclient [none]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
-   ```
+      示例：
 
-   成功执行后可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
+      ```sql
+      obclient [none]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
+      ```
 
-4. 对问题节点执行 Isolate Server 操作。
+      成功执行后可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
 
-   语句如下：
+   3. 对问题节点执行 Isolate Server 操作。
 
-   ```sql
-   ALTER SYSTEM ISOLATE SERVER 'ip:port'; 
-   ```
+      语句如下：
 
-   示例：
+      ```sql
+      ALTER SYSTEM ISOLATE SERVER 'ip:port'; 
+      ```
 
-   ```sql
-   obclient [none]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
-   ```
+      示例：
 
-   成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
+      ```sql
+      obclient [none]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
+      ```
 
-   * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
+      成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
 
-   * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
+      * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
-5. 使用 `kill -9 pid` 命令 Kill observer 进程。
+      * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
+
+3. 使用 `kill -9 pid` 命令 Kill observer 进程。
 
    本操作务必要谨慎，可能会产生如下严重影响：
 
@@ -121,8 +125,8 @@
    3. 执行以下命令，查看并获取节点的进程 ID。
 
       ```bash
-      [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
-      admin       6136      0 99 11:23 ?        00:00:19 ./bin/observer
+      [admin@xxx bin]$ ps -ef | grep observer | grep -v grep
+      admin    103364      1 99  2022 ?        51-17:51:06 /home/admin/oceanbase/bin/observer
       ```
 
    4. Kill observer 进程。
@@ -138,7 +142,7 @@
       示例如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 6136
+      [admin@xxx oceanbase]$ kill -9 103364
       ```
 
 ## 相关文档
