--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
@@ -53,6 +53,9 @@
    4 rows in set
    ```
 
+   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/63.oceanbase-dba_ob_zones.md)。
+
+
 ## 相关文档
 
 更多 Zone 相关的运维操作，请参见以下信息：
