--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.modify-cluster-parameters.md
@@ -23,7 +23,7 @@
    示例：
 
    ```sql
-   obclient [none]> SHOW PARAMETERS LIKE '%syslog_level%';
+   obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%';
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
@@ -72,21 +72,29 @@
     示例：
 
     ```sql
-    obclient [none]> ALTER SYSTEM SET syslog_level='ERROR' SCOPE = SPFILE;
+    obclient [(none)]> ALTER SYSTEM SET syslog_level='ERROR' SCOPE = SPFILE;
 
-    obclient [none]> ALTER SYSTEM SET system_memory = '50G' ZONE = 'z1';
+    obclient [(none)]> ALTER SYSTEM SET system_memory = '50G' ZONE = 'zone1';
 
-    obclient [none]> ALTER SYSTEM SET syslog_io_bandwidth_limit = '5M';
+    obclient [(none)]> ALTER SYSTEM SET syslog_io_bandwidth_limit = '5M';
 
-    obclient [none]> ALTER SYSTEM SET memory_limit = '250G' SERVER='xx.xx.xx.1:2882';
+    obclient [(none)]> ALTER SYSTEM SET memory_limit = '250G' SERVER='xx.xx.xx.238:2882';
     ```
 
-4. 修改成功后，可以根据实际情况（重启 OBServer 或不重启 OBServer），通过 `SHOW PARAMETERS LIKE 'parameter_name';` 语句验证配置项的值是否修改成功。
+4. 修改成功后，可以根据实际情况（重启 OBServer 或不重启 OBServer），通过 `SHOW PARAMETERS` 语句验证配置项的值是否修改成功。
 
    ```sql
-   
+   obclient [(none)]> SHOW PARAMETERS LIKE 'system_memory';
+   +-------+----------+----------------+----------+---------------+-----------+-------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   | zone  | svr_type | svr_ip         | svr_port | name          | data_type | value | info                                                                                                                                                                    | section  | scope   | source  | edit_level        |
+   +-------+----------+----------------+----------+---------------+-----------+-------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   | zone1 | observer | xx.xx.xx.237   |     2882 | system_memory | NULL      | 50G   | the memory reserved for internal use which cannot be allocated to any outer-tenant, and should be determined to guarantee every server functions normally. Range: [0M,) | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone3 | observer | xx.xx.xx.218   |     2882 | system_memory | NULL      | 0M    | the memory reserved for internal use which cannot be allocated to any outer-tenant, and should be determined to guarantee every server functions normally. Range: [0M,) | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone2 | observer | xx.xx.xx.238   |     2882 | system_memory | NULL      | 0M    | the memory reserved for internal use which cannot be allocated to any outer-tenant, and should be determined to guarantee every server functions normally. Range: [0M,) | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   +-------+----------+----------------+----------+---------------+-----------+-------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   3 rows in set 
    ```
 
 ## 相关文档
 
-更多集群配置项相关的介绍信息，请参见 [](）。
+更多集群配置项相关的介绍信息，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md）。
