--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -61,7 +61,7 @@
       示例：
 
       ```sql
-      obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
+      obclient [(none)]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
       ```
 
       成功执行后，可以对节点做任何运维操作，可以直接执行 kill observer 进程操作，对业务流量无任何影响。
@@ -79,7 +79,7 @@
       示例：
 
       ```sql
-      obclient [none]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
+      obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
       ```
 
       成功执行后可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
@@ -95,7 +95,7 @@
       示例：
 
       ```sql
-      obclient [none]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
+      obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
       ```
 
       成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
