--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
@@ -31,7 +31,7 @@
    删除进群中的 `zone4` 的示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM DELETE ZONE zone4;
+   obclient [(none)]> ALTER SYSTEM DELETE ZONE zone4;
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
