--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.modify-a-zone.md
@@ -35,7 +35,7 @@
    修改 `zone4` 的机房名和 Region 名的示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM ALTER ZONE zone4 SET REGION 'shanghai',IDC 'sh1';
+   obclient [(none)]> ALTER SYSTEM ALTER ZONE zone4 SET REGION 'shanghai',IDC 'sh1';
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
