--- a/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
+++ b/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
@@ -14,6 +14,8 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+
 2. 尽快对异常节点执行 Stop Server 或 Force Stop Server 操作，并确保执行成功，避免影响业务流量。
 
    Stop Server 的语句如下：
@@ -25,7 +27,7 @@
    示例：
 
    ```sql
-   obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
+   obclient [(none)]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
    ```
 
    Force Stop Server 的语句如下：
@@ -37,7 +39,7 @@
    示例：
 
    ```sql
-   obclient [none]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
+   obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
    ```
 
    Stop Server 和 Force Stop Server 操作的内部执行流程相关信息请参见 [隔离节点](../3.common-cluster-operations/4.isolation-a-node.md)。
