--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.add-a-zone.md
@@ -35,13 +35,13 @@
    在集群中增加 `zone4` 的示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM ADD ZONE zone4 IDC 'hz1', REGION 'hangzhou';
+   obclient [(none)]> ALTER SYSTEM ADD ZONE zone4 IDC 'hz1', REGION 'hangzhou';
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
    ```sql
-   obclient [none]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+----------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS   | IDC | REGION   | TYPE      |
    +-------+----------------------------+----------------------------+----------+-----+----------+-----------+
