--- a/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
+++ b/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
@@ -2,7 +2,7 @@
 
 本节主要介绍少数派节点故障的故障处理流程。
 
-## 少数派节点故障处理流程
+## 操作步骤
 
 当发生节点异常，或者怀疑节点异常时，需要隔离并替换该异常节点，具体操作如下：
 
@@ -50,20 +50,215 @@
 
 4. 在新增节点上补全异常节点上的副本的流程，分为以下三种场景：
 
-   1. observer 进程已经退出的场景
+   * observer 进程已经退出的场景
 
       您可以主动发起 Unit 迁移，或者等待 RS 调度自动发起 Unit 迁移。如果超过永久下线时间手动迁移 Unit 仍然没有成功，Unit 迁移会自动完成，然后自动走补副本逻辑。
+
+      手动发起 Unit 迁移的相关操作如下： 
+
+      1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
+
+          ```sql
+          obclient [(none)]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+          +---------+-----------+--------+-------+----------------+
+          | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
+          +---------+-----------+--------+-------+----------------+
+          |       1 |         1 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |       2 |         1 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |       3 |         1 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1001 |      1002 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1002 |      1002 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1003 |      1002 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1010 |      1008 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1011 |      1008 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1012 |      1008 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1013 |      1010 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1014 |      1010 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1015 |      1010 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1016 |      NULL | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1017 |      NULL | ACTIVE | zone2 |   xx.xx.xx.238 |
+          +---------+-----------+--------+-------+----------------+
+          14 rows in set
+          ```
+
+      2. 根据查询结果，执行以下命令，将异常节点上的 Unit 迁移到新增节点上。
+
+          语句如下：
+
+          ```sql
+          obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'ip:port'; 
+          ```
+
+          相关参数说明如下：
+
+          * `unit_id`：表示待迁移的 Unit 的 ID。
+
+          * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
+
+          * `port`：指定 Unit 迁移后的节点的 RPC 端口。
+
+          将 ID 为 `1012` 的 Unit 迁移到 `xx.xx.xx.218` 服务器上的示例如下：
+
+          ```sql
+          obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
+          ```
   
-   2. 数据异常，或者进程状态异常导致迁移 Unit 操作卡住，或者进程状态异常导致全局状态异常（例如，合并卡住）的场景
+   * 数据异常，或者进程状态异常导致迁移 Unit 操作卡住，或者进程状态异常导致全局状态异常（例如，合并卡住）的场景
 
-      您可以主动 kill observer 进程，然后参考第一种场景处理。
+      您可以主动 kill observer 进程，然后参考第一种场景（observer 进程已经退出的场景）处理。具体操作示例如下：
 
-   3. 硬件隐患，以及不会导致集群全局状态异常的场景
+      1. 在异常节点上 Kill observer 进程。
+
+         1. 使用 `admin` 用户登录异常节点所在的机器。
+
+         2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
+
+            ```bash
+            [admin@xxx /]$ cd /home/admin/oceanbase/bin
+            ```
+
+         3. 执行以下命令，查看并获取节点的进程 ID。
+
+            ```bash
+            [admin@xxx bin]$ ps -ef | grep observer | grep -v grep
+            admin    103364      1 99  2022 ?        51-17:51:06 /home/admin/oceanbase/bin/observer
+            ```
+
+         4. Kill observer 进程。
+
+            命令如下：
+
+            ```bash
+            [admin@xxx oceanbase]$ kill -9 pid
+            ```
+
+            其中，`pid` 为待停止的节点的 observer 进程 ID。
+
+            示例如下：
+
+            ```bash
+            [admin@xxx oceanbase]$ kill -9 103364
+            ```
+
+      2. 手动发起 Unit 迁移。
+
+         1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+
+            连接示例如下，连接数据库时请以实际环境为准。
+
+            ```shell
+            obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+            ```
+
+            有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+         
+         2. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
+
+            ```sql
+            obclient [(none)]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+            +---------+-----------+--------+-------+----------------+
+            | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
+            +---------+-----------+--------+-------+----------------+
+            |       1 |         1 | ACTIVE | zone1 |   xx.xx.xx.237 |
+            |       2 |         1 | ACTIVE | zone2 |   xx.xx.xx.238 |
+            |       3 |         1 | ACTIVE | zone3 |   xx.xx.xx.218 |
+            |    1001 |      1002 | ACTIVE | zone3 |   xx.xx.xx.218 |
+            |    1002 |      1002 | ACTIVE | zone1 |   xx.xx.xx.237 |
+            |    1003 |      1002 | ACTIVE | zone2 |   xx.xx.xx.238 |
+            |    1010 |      1008 | ACTIVE | zone3 |   xx.xx.xx.218 |
+            |    1011 |      1008 | ACTIVE | zone2 |   xx.xx.xx.238 |
+            |    1012 |      1008 | ACTIVE | zone1 |   xx.xx.xx.237 |
+            |    1013 |      1010 | ACTIVE | zone3 |   xx.xx.xx.218 |
+            |    1014 |      1010 | ACTIVE | zone1 |   xx.xx.xx.237 |
+            |    1015 |      1010 | ACTIVE | zone2 |   xx.xx.xx.238 |
+            |    1016 |      NULL | ACTIVE | zone1 |   xx.xx.xx.237 |
+            |    1017 |      NULL | ACTIVE | zone2 |   xx.xx.xx.238 |
+            +---------+-----------+--------+-------+----------------+
+            14 rows in set
+            ```
+
+         3. 根据查询结果，执行以下命令，将异常节点上的 Unit 迁移到新增节点上。
+
+            语句如下：
+
+            ```sql
+            obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'ip:port'; 
+            ```
+
+            相关参数说明如下：
+
+            * `unit_id`：表示待迁移的 Unit 的 ID。
+
+            * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
+
+            * `port`：指定 Unit 迁移后的节点的 RPC 端口。
+
+            将 ID 为 `1012` 的 Unit 迁移到 `xx.xx.xx.218` 服务器上的示例如下：
+
+            ```sql
+            obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
+            ```
+
+   * 硬件隐患，以及不会导致集群全局状态异常的场景
 
       该场景不需要 Kill observer 进程（避免 Kill observer 后导致的集群风险敞口变大）。您可以主动发起 Unit 迁移，将异常节点上的 Unit 全部迁移至新增节点。
+
+      手动发起 Unit 迁移的相关操作如下： 
+
+      1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
+
+          ```sql
+          obclient [(none)]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+          +---------+-----------+--------+-------+----------------+
+          | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
+          +---------+-----------+--------+-------+----------------+
+          |       1 |         1 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |       2 |         1 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |       3 |         1 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1001 |      1002 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1002 |      1002 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1003 |      1002 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1010 |      1008 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1011 |      1008 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1012 |      1008 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1013 |      1010 | ACTIVE | zone3 |   xx.xx.xx.218 |
+          |    1014 |      1010 | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1015 |      1010 | ACTIVE | zone2 |   xx.xx.xx.238 |
+          |    1016 |      NULL | ACTIVE | zone1 |   xx.xx.xx.237 |
+          |    1017 |      NULL | ACTIVE | zone2 |   xx.xx.xx.238 |
+          +---------+-----------+--------+-------+----------------+
+          14 rows in set
+          ```
+
+      2. 根据查询结果，执行以下命令，将异常节点上的 Unit 迁移到新增节点上。
+
+          语句如下：
+
+          ```sql
+          obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'ip:port'; 
+          ```
+
+          相关参数说明如下：
+
+          * `unit_id`：表示待迁移的 Unit 的 ID。
+
+          * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
+
+          * `port`：指定 Unit 迁移后的节点的 RPC 端口。
+
+          将 ID 为 `1012` 的 Unit 迁移到 `xx.xx.xx.218` 服务器上的示例如下：
+
+          ```sql
+          obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
+          ```
+  
 
    操作结束后，可以通过内部表查看数据补全进度。
 
 5. 待异常节点上的 Unit 在新增节点上补全后，删除异常节点。
 
    删除节点的具体操作请参见 [删除节点](../3.common-cluster-operations/3.delete-a-node.md)。
+
+## 相关文档
+
+更多节点故障相关的介绍，请参见 [节点故障概述](1.node-fault-overview.md)。
