--- a/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
+++ b/zh-CN/6.manage/1.clutser-management/3.troubleshooting-common-cluster-faults/2.minority-node-failure.md
@@ -2,6 +2,22 @@
 
 本节主要介绍少数派节点故障的故障处理流程。
 
+## 背景信息
+
+OceanBase 数据库是一款分布式数据库，典型的部署模式为多副本架构，本章节仅介绍不影响任何日志流的多数派副本的节点故障。例如，三副本部署架构下，可以容忍任意一个节点故障而不影响多数派；五副本部署架构下，可以任意两个节点故障而不影响多数派。如果已经存在部分日志流缺少副本，可能少于预期容忍度的节点故障依然会影响多数派，该场景请参见 [多数派节点故障](3.majority-node-failure.md)。
+
+常见的节点故障主要有：
+
+* 节点硬件异常导致宕机。
+
+* 节点硬件异常尚未宕机，但导致该节点上的 observer 进程异常退出，例如，内存异常。
+
+* 节点硬件异常尚未宕机，但导致该节点上的 observer 进程状态异常，例如，IO 异常导致 observer 进程的读写请求超时。
+
+* 节点硬件异常尚未宕机，并导致该节点上的 observer 进程写入 SSTable 或 RedoLog 的数据异常，并于随后的 Checksum 校验中检查出来。
+
+* OceanBase 数据库 Bug 导致的  observer 进程异常，例如，线程卡住、内存超限等异常。
+
 ## 操作步骤
 
 当发生节点异常，或者怀疑节点异常时，需要隔离并替换该异常节点，具体操作如下：
@@ -259,6 +275,3 @@
 
    删除节点的具体操作请参见 [删除节点](../3.common-cluster-operations/3.delete-a-node.md)。
 
-## 相关文档
-
-更多节点故障相关的介绍，请参见 [节点故障概述](1.node-fault-overview.md)。
