--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
@@ -43,15 +43,23 @@
 
    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
-4. 通过 `CREATE RESOURCE POOL` 语句，创建名为 mq_pool_01 的资源池。
+4. 通过 `CREATE RESOURCE POOL` 语句，创建资源池。
+
+   在本示例中，创建了一个名为 mq_pool_01 的资源池。observer 会在 zone1、zone2 里各创建 1 个 unit，每个 unit 的资源规格为 S1_unit_config。
 
     ```sql
-    obclient> CREATE RESOURCE POOL mq_pool_01 
-        UNIT='S1_unit_config', 
-        UNIT_NUM=1, 
-        ZONE_LIST=('zone1','zone2'); 
+    obclient [oceanbase]> CREATE RESOURCE POOL mq_pool_01 
+                    UNIT='S1_unit_config', 
+                    UNIT_NUM=1, 
+                    ZONE_LIST=('zone1','zone2'); 
     ```
-  
+
+   参数说明：
+
+   * UNIT 表示该资源池的资源规格。
+   * ZONE_LIST 表示资源池的 Zone 分布。observer 会在 ZONE_LIST 描述的每个 Zone 里面创建 UNIT_NUM 个 unit，每个unit 的资源规格为 unit 参数值。
+   * UNIT_NUM 表示该资源池在目标 Zone 的 UNIT 个数，它的值要小于目标Zone的节点个数，且每个节点上最多只能分布同一个租户的一个UNIT。
+
    `CREATE RESOURCE POOL` 语句的详细说明，请参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
 
 5. 查询 `DBA_OB_RESOURCE_POOLS` 视图，确认创建成功。
