--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -46,16 +46,40 @@
 
    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
 
-4. 通过 create tenant 语句，创建租户。
+4. 通过 `CREATE TENANT` 语句，创建租户。
 
    在本示例中，创建了一个名为 mq_t1 的租户（默认为 MySQL 模式租户），副本数为 2，资源池指定为 mq_pool_01，primary zone 为 zone1。
 
     ```sql
-    obclient> create tenant if not exists mq_t1 
-        replica_num=2, 
-        primary_zone='zone1', 
-        resource_pool_list=('mq_pool_01');
+    obclient [oceanbase]> CREATE tenant IF NOT EXISTS mq_t1 
+                    REPLICA_NUM=2, 
+                    PRIMARY_ZONE='zone1', 
+                    RESOURCE_POOL_LIST=('mq_pool_01');
+    
+    # 如果需要创建的是 Oracle 兼容模式的租户，则需要显式指定 ob_compatibility_mode='oracle';
+    obclient [oceanbase]>create tenant obclient> if not exists oracle_tenant1 
+                    replica_num=2, 
+                    primary_zone='zone1', 
+                    resource_pool_list=('mq_pool_01')
+                    SET ob_compatibility_mode='oracle';
+
     ```
+
+   参数说明：
+
+   * IF NOT EXISTS：可选参数，如果要创建的租户名已存在，并且没有指定 IF NOT EXISTS，则会出现错误。
+   * REPLICA_NUM：指定数据的副本份数。
+   * PRIMARY_ZONE：指定租户的 Primary Zone。
+
+     Primary Zone 表示 Leader 副本的偏好位置。指定 Primary Zone 实际上是指定了 Leader 更趋向于被调度到哪个 Zone 上。 Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级；使用逗号（,）分隔的 Zone 具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
+
+     例如，primary_ zone =' zone1; zone2, zone3' 表示该租户的表的分区 Leader 在 zone1 上， zone1 比 zone2、zone3 的优先级高，zone2 和 zone3 是同一优先级。
+
+     >**注意**
+     >
+     >在指定 PRIMARY_ZONE 时，其值可以设置为 RANDOM（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 Primary Zone。
+
+   * RESOURCE_POOL_LIST：创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。
 
    `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
 
