--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
@@ -1,18 +1,28 @@
 # 修改 Locality
 
-OceanBase 数据库支持修改租户的 Locality 属性。
+本文介绍如何修改租户的 Locality 属性。
 
-## 修改 Locality 语法
+## Locality 应用场景
 
-修改 Locality 语法如下：
+Locality 的设置通常用于租户的副本数增加、减少或迁移：
 
-```sql
-ALTER TENANT 'TENANT_NAME' SET LOCALITY = 'locality_description';
-```
+租户副本数增加
+
+对集群中的某个租户，增加租户下 Partition 的副本数，一次只能增加一个。例如，租户从 3 副本变为 5 副本，需要将 Locality 由 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 F@z1,F@z2,F@z3,F@z4 变更为 F@z1,F@z2,F@z3,F@z4,F@z5 。
+
+租户副本数减少
+
+对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 F@z1,F@z2,F@z3,F@z4 变更为 F@z1,F@z2,F@z3  。
+
+租户副本迁移
+
+对集群内的某个租户通过若干次 Locality 变更，调整租户的机房分布。例如：租户原先的 Locality 为 `F@z1,F@z2,F@z3` ，由于 z3 机房到期，需要调整为 z4，变更的为 Locality 为 `F@z1,F@z2,F@z4` ，需要做两次 Locality 变更：从 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z4` 。
 
 ## 前提条件
 
 变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
+
+有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 注意事项
 
@@ -22,7 +32,7 @@ ALTER TENANT 'TENANT_NAME' SET LOCALITY = 'locality_description';
 
 * 在旧一轮租户 Locality 没有完成变更时，新一轮的租户 Locality 变更不允许被执行。
 
-* Locality 变更一次只能执行一个原子动作，例如替换一个 Zone 的副本，不能直接替换，可以先增加一个 Zone，再减少一个 Zone。
+* Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4 ，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
 
 * 通过修改 Locality 可能会导致租户 Locality 与 租户 Primary Zone 不匹配，需要确认是否需要主动修改 Primary Zone 。
 
