--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.copy-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.copy-migration.md
@@ -1,30 +1,8 @@
 # 副本迁移
 
+本文介绍如何进行副本迁移。
+
 副本迁移，又称 Unit 迁移，描述的是在单个 Zone 内部，Unit 在节点之间的迁移。副本迁移只涉及副本在 Zone 内部的位置变更，不涉及副本个数、副本类型的变更。适用于 节点故障场景 和 负载均衡场景。
-
-## 副本迁移语法
-
-语法如下：
-
-```sql
-ALTER SYSTEM MIGRATE UNIT [=] unit_id DESTINATION [=] ip_port;
-```
-
-语句说明：
-
-* 该语句仅支持在 sys 租户以 root 用户执行。
-
-* unit_id 表示 Unit 编号，可通过 DBA_OB_UNITS 表查看。
-
-* ip_port 表示 Unit 迁移到的目标地址，可通过 DBA_OB_SERVERS 表查看。
-
-## 查看副本迁移任务的运行状态
-
-可通过以下语句查看副本迁移任务的运行状态：
-
-  ```sql
-  select * from DBA_OB_UNIT_JOBS where JOB_TYPE = 'MIGRATE_UNIT';
-  ```
 
 ## 操作步骤
 
@@ -123,3 +101,13 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id DESTINATION [=] ip_port;
     ```
 
 通过查询可以看到 `UNIT_ID = 1006` 已经由 `xx.xx.xx.19` 变更为 `xx.xx.xx.158` 。
+
+## 相关文档
+
+* 关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
+
+* 关于视图 `DBA_OB_SERVERS` 的介绍可以详见视图 [oceanbase.DBA_OB_SERVERS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md) 。
+
+* 关于视图 `DBA_OB_UNIT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_UNIT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/59.oceanbase-dba_ob_unit_jobs-of-mysql-mode.md) 。
+  
+* 关于视图 `DBA_OB_UNITS` 的介绍可以详见视图 [oceanbase.DBA_OB_UNITS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md) 。
