--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
@@ -1,6 +1,8 @@
 # 查看 Locality
 
-本文主要介绍通过视图 `DBA_OB_TENANTS` 来查看租户的副本类型及分布，关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
+本文介绍如何通过视图 `DBA_OB_TENANTS` 查看租户的副本类型及分布。
+
+关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
 
 ## 操作步骤
 
